# PDFReader

./: .gitignore  CMakeLists.txt  README.md  main.cpp
resources/: application.qrc  version.rc
resources/keys/: private.key  public.pem
src/hdHandle/: HdInfoHandle.cpp  HdInfoHandle.h  KeyInfoDialog.h  cryptology.cpp  cryptology.h
src/mainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/pdfHandler/: contents.cpp  contents.h  viewer.cpp  viewer.h
